--- a/play2/app/views/index.html
+++ b/play2/app/views/index.html
@@ -28,43 +28,49 @@
 </head>
 <body>
 <script type="text/x-handlebars" data-template-name="application">
-<!--header-->
-<div class="header">
-    <div class="wrap">
-        <div class="navbar navbar_ clearfix">
-            <div class="container">
-                <div class="row">
-                    <div class="span3">
-                        <div class="logo"><a href="index.html"><img src="../../public/img/theme_pmt/logo.png"></a>
+
+<!--HEADER-->
+    <div class="header">
+        <div class="wrap">
+            <div class="navbar navbar_ clearfix">
+                <div class="container">
+                    <div class="row">
+                        <div class="span3">
+                            <div class="logo"><a href="index.html"><img src="../../public/img/theme_pmt/logo.png"></a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="span9">
-                        <div class="navbar navbar_ clearfix">
-                            <nav id="main_menu">
-                                <div class="menu_wrap">
-                                    <ul class="nav sf-menu">
-                                        <li class="current"><a href="index.html">Home</a><span class="menu_t">home page</span></li>
-                                        <li><a href="#">About</a><span class="menu_t">about us</span></li>
-                                        <li><a href="#">Contacts</a><span class="menu_t">contact page</span></li>
-                                        <li><a href="#">Projects</a><span class="menu_t">projects</span></li>
-                                    </ul>
-                                </div>
-                            </nav>
+                        <div class="span9">
+                            <div class="navbar navbar_ clearfix">
+                                <nav id="main_menu">
+                                    <div class="menu_wrap">
+                                        <ul class="nav sf-menu">
+                                            <li class="current"><a href="index.html">Home</a><span class="menu_t">home page</span></li>
+                                            <li><a href="#">About</a><span class="menu_t">about us</span></li>
+                                            <li><a href="#">Contact</a><span class="menu_t">contact page</span></li>
+                                            <li><a href="#">Projects</a><span class="menu_t">projects</span></li>
+                                        </ul>
+                                    </div>
+                                </nav>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!--//header-->
+<!--//HEADER-->
 
 <!--page_container-->
 <div class="page_container">
     <div class="breadcrumb">
         <div class="wrap">
             <div class="container">
-                <a href="index.html">Home</a><!--<span>/</span>-->
+                <a href="index.html">Home</a>
+                {{#if HaBlog.router.applicationController.currentSection}}
+                     <span>/</span>
+                     <span>{{{HaBlog.router.applicationController.currentSection}}}</span>
+                {{/if}}
+                <!--<span>/</span>-->
             </div>
         </div>
     </div>
@@ -73,52 +79,28 @@
             <section>
                 <div class="row">
                     <div class="span8">
-
                         {{outlet}}
-
-
                     </div>
                     <div class="span4">
+
+                        <!-- SIDEBAR -->
                         <div class="sidebar">
+
+                            <!-- SEARCH -->
                             <div class="widget">
                                 <form class="form-search">
                                     <input type="text" class="input-medium search-query">
                                     <button type="submit" class="btn dark_btn">Search</button>
                                 </form>
                             </div>
+
+                            <!-- DISCLAIMER -->
                             <div class="widget">
-                                <h2 class="title"><span>text widjet</span></h2>
-                                <p>Praesent vestibulum molestie lacus. Aenean nonummy hendrerit mauris. Phasellus porta. Fusce suscipit varius mi nascetur ridiculus mus. Nulla dui. Fusce feugiat malesuada odio. Morbi nunc odio, gravida at, cursus nec, luctus a, lorem. Maecenas tristique orci ac sem. Duis ultricies pharetra magna. Donec accumsan malesuada orci. Donec sit amet eros. Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-                                <p><a href="#" class="arrow_link">Read more &rarr;</a></p>
+                                <h2 class="title"><span>Disclaimer</span></h2>
+                                <p>This is a personal blog, check the full disclaimer <a href="#">here</a></p>
                             </div>
-                            <div class="widget">
-                                <h2 class="title"><span>recent posts</span></h2>
-                                <ul class="recent_post">
-                                    <li>
-                                        <a href="#"><img src="img/img8.jpg" alt="" /></a>
-                                        <div><a href="#">It is a long established fact that a reader will be distracted </a></div>
-                                        16th July, 2020
-                                        <div class="clear"></div>
-                                    </li>
-                                    <li>
-                                        <a href="#"><img src="img/img9.jpg" alt="" /></a>
-                                        <div><a href="#">It is a long established fact that a reader will be distracted </a></div>
-                                        16th July, 2020
-                                        <div class="clear"></div>
-                                    </li>
-                                    <li>
-                                        <a href="#"><img src="img/img10.jpg" alt="" /></a>
-                                        <div><a href="#">It is a long established fact that a reader will be distracted </a></div>
-                                        16th July, 2020
-                                        <div class="clear"></div>
-                                    </li>
-                                </ul>
-                                <p><a href="#" class="arrow_link">Go to the portfolio</a></p>
-                            </div>
-                            <div class="widget">
-                                <h2 class="title"><span>Latest tweets</span></h2>
-                                <div class="tweet_block"></div>
-                            </div>
+
+                            <!-- TAGS -->
                             <div class="widget tags">
                                 <h2 class="title"><span>tags</span></h2>
                                 <a href="#">Lorem ipsum</a>
@@ -128,17 +110,36 @@
                                 <a href="#">Latin words</a>
                                 <a href="#">Excepteur sint</a>
                             </div>
+
+                            <!-- RECENT POSTS-->
                             <div class="widget">
-                                <h2 class="title"><span>links</span></h2>
-                                <ul class="links">
-                                    <li><a href="#">Lorem ipsum dolor sit amet, consectetur</a></li>
-                                    <li><a href="#">Adipisicing elit, sed do eiusmod tempor incididunt</a></li>
-                                    <li><a href="#">Ut labore et dolore magna aliqua.</a></li>
-                                    <li><a href="#">Ut enim ad minim veniam, quis nostrud exercitation ullamco</a></li>
-                                    <li><a href="#">Laboris nisi ut aliquip ex ea commodo consequat.</a></li>
-                                    <li><a href="#">Duis aute irure dolor in reprehenderit</a></li>
-                                    <li><a href="#">In voluptate velit esse cillum</a></li>
-                                    <li><a href="#">Excepteur sint occaecat cupidatat non proident</a></li>
+                                <h2 class="title"><span>recent posts</span></h2>
+                                <ul class="recent_post">
+                                    {{#each post in router.postListController.recentPosts}}
+                                        <li>
+                                            <div><a href="#" {{action showPost post}}>{{{post.title}}} </a></div>
+                                            {{post.created}}
+                                            <div class="clear"></div>
+                                        </li>
+                                    {{/each}}
+                                    <!--<li>-->
+                                        <!--<a href="#"><img src="img/img8.jpg" alt="" /></a>-->
+                                        <!--<div><a href="#">It is a long established fact that a reader will be distracted </a></div>-->
+                                        <!--16th July, 2020-->
+                                        <!--<div class="clear"></div>-->
+                                    <!--</li>-->
+                                    <!--<li>-->
+                                        <!--<a href="#"><img src="img/img9.jpg" alt="" /></a>-->
+                                        <!--<div><a href="#">It is a long established fact that a reader will be distracted </a></div>-->
+                                        <!--16th July, 2020-->
+                                        <!--<div class="clear"></div>-->
+                                    <!--</li>-->
+                                    <!--<li>-->
+                                        <!--<a href="#"><img src="img/img10.jpg" alt="" /></a>-->
+                                        <!--<div><a href="#">It is a long established fact that a reader will be distracted </a></div>-->
+                                        <!--16th July, 2020-->
+                                        <!--<div class="clear"></div>-->
+                                    <!--</li>-->
                                 </ul>
                             </div>
                         </div>
@@ -152,57 +153,18 @@
 
 <!--footer-->
 <div id="footer">
-    <!--<div class="wrap" style="margin-bottom: 64px;">
-        <div class="container">
-            <div class="row">
-                <div class="span3">
-                    <h2 class="title dionysus_font"><span>Prometeus</span></h2>
-                    <p>In viverra dolor eget ipsum molestie id dictum augue convallis. Nullam et velit pellentesque orci tincidunt auctor. Integer egestas dui aliquet mi sagittis sit amet consectetur metus consectetur. Phasellus dapibus porta metus. Ut ultricies rhoncus accumsan.</p>
-                    <p>Proin sollicitudin vehicula mauris eu molestie. Duis dictum mattis nisi, et convallis nibh vehicula sit amet. Ut eget lorem eget nulla venenatis fringilla sed vel magna. Nunc aliquet feugiat lobortis. Quisque ac sem sed</p>
-
-                </div>
-                <div class="span3">
-                    <h2 class="upper2 title3"><span>Latest tweets</span></h2>
-                     <div class="tweet_block"><img src="img/latest_bird.png" /></div>
-                </div>
-                <div class="span3">
-                    <h2 class="upper2 title3"><span>testimonials</span></h2>
-                    <div class="recall">
-                        <p>" Ut eget lorem eget nulla venenatis fringilla sed vel magna. Nunc aliquet feugiat lobortis. Quisque ac sem sed lorem vestibulum malesuada. Pellentesque vel mattis lacus of letters, as opposed to using "</p>
-                    </div>
-                    <div class="recall_triangle"></div>
-                    <div class="people_recall">
-                        <img src="img/stephen.jpg" />
-                        <p>Stephen Bingham</p>
-                        <a href="#">demolink.org</a>
-                    </div>
-                </div>
-                <div class="span3">
-                    <h2 class="upper2 title3"><span>flickr</span></h2>
-                    <div class="flickrs">
-                        <div class="FlickrImages">
-                            <ul></ul>
-                            <div class="clear"></div>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-        </div>
-    </div>-->
     <div class="wrap">
         <div class="container">
             <div class="row">
-                <div class="span6 call_now">
-                    <div class="text_wrap1">Mauris adipiscing venenatis volutpat. Pellentesque sit amet lacus non odio gravida hendrerit at et nulla.</div>
+                <div class="span10 call_now">
+                    <!-- TODO: EXPAND TEXT -->
+                    <div id="full_disclaimer" class="text_wrap1">This is a personal weblog. The opinions expressed here represent my own and not those of my employer <a>...</a></div>
                 </div>
-                <div class="span6 follow_us">
+                <div class="span2 follow_us">
                     <ul>
-                        <li><a href="#" class="facebook">Facebook</a></li>
+                        <!--TODO: GET GOOGLE+ IMG -->
+                        <li><a href="#" class="facebook">Google+</a></li>
                         <li><a href="#" class="twitter">twitter</a></li>
-                        <li><a href="#" class="flickr">flickr</a></li>
-                        <li><a href="#" class="dribbble_alt">Dribbble Alt</a></li>
-                        <li><a href="#" class="rss">rss</a></li>
                     </ul>
                 </div>
             </div>
@@ -217,7 +179,7 @@
                         <ul>
                             <li><a href="index.html" class="first_world_menu current">Home Page</a></li>
                             <li><a href="#">About</a></li>
-                            <li><a href="#">Contacts</a></li>
+                            <li><a href="#">Contact</a></li>
                             <li><a href="#">Projects</a></li>
                         </ul>
                     </div>
