--- a/play2/app/views/index.scala.html
+++ b/play2/app/views/index.scala.html
@@ -88,7 +88,7 @@
 
 <!-- POST LIST TEMPLATE -->
 <script type="text/x-handlebars" data-template-name="postList">
-    {{#each HaBlog.postListController}}
+    {{#each HB.postListController}}
     <article>
         <div class="post span11">
             <header>
