--- a/play2/app/views/index.html
+++ b/play2/app/views/index.html
@@ -103,12 +103,10 @@
                             <!-- TAGS -->
                             <div class="widget tags">
                                 <h2 class="title"><span>tags</span></h2>
-                                <a href="#">Lorem ipsum</a>
-                                <a href="#">Dolor</a>
-                                <a href="#">Long established</a>
-                                <a href="#">Sit amet</a>
-                                <a href="#">Latin words</a>
-                                <a href="#">Excepteur sint</a>
+                                {{#each tag in HB.router.tagController}}
+                                    <a href="#">{{tag.name}}</a>
+                                {{/each}}
+
                             </div>
 
                             <!-- RECENT POSTS-->
